Fetched from backend

--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "MERN shopping site",
   "main": "server.js",
   "scripts": {
-    "start": "node back-end/server"
+    "start": "node back-end/server",
+    "server": "nodemon back-end/server",
+    "client": "npm start --prefix front-end",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Jihan",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0",
+    "nodemon": "^2.0.9"
   }
 }
