Es module added

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "MERN shopping site",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node back-end/server",
     "server": "nodemon back-end/server",
